# SMART-face-recognition-system

./: .gitignore  LICENSE  Makefile  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
app/: globals.css  page.tsx
migrations/versions/: 689b5bc61b9d_initial_migration.py
models/: capture_samples.py  face_detection.py  load_cascade.py  user_input.py  video_capture.py
smart_face_recognition_system/: api.py
smart_face_recognition_system/Scripts/: data_collection.py
smart_face_recognition_system/api/: setup_api.py
