[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "smart_face_recognition_system"
version = "0.0.1"
description = "SMART is a face recognition attendance system that automates attendance tracking. It offers real-time face detection, easy user management, and comprehensive attendance reporting."
authors = [
  { name = "Team2" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["smart_face_recognition_system"]
force_sort_within_sections = true
